style: fix width and alignment of the theme button

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   margin-block: 3rem 2.1rem;
 }
@@ -13,12 +13,10 @@
 }
 
 .header__theme-btn {
-  width: clamp(1.1rem, 0.924rem + 0.845vw, 1.6rem);
+  width: 1.25rem;
 }
 
 .theme-btn__icon {
-  width: 1.2rem;
-  aspect-ratio: 1 / 1;
   transition: all 250ms ease-in-out;
 }
 
@@ -28,13 +26,16 @@
 
 @media only screen and (min-width: 768px) {
   .header {
+    align-items: baseline;
     margin-block: clamp(3rem, 2.437rem + 2.704vw, 4.6rem)
       clamp(2.1rem, 2.065rem + 0.169vw, 2.2rem);
-    /* margin-block: 3rem 4.6rem; */
-    /* margin-block: 4.6rem 2.25rem; */
   }
 
   .header__title {
     font-size: clamp(1.665rem, 1.371rem + 1.411vw, 2.5rem);
+  }
+
+  .header__theme-btn {
+    width: clamp(1.1rem, 0.924rem + 0.845vw, 1.6rem);
   }
 }
